@@ -1,21 +1,16 @@
 robot:
-  name: simple_robot
+  name: planar_2R
   links:
     - id: 0
-      length: 0.080
+      length: 0.5      # Longitud primer eslabón
       type: revolute
-      link_orientation: [0, 0, 1]
-      joint_coords: [0, 0, 0.103]
-      joint_axis: [0, 0, 1]
+      link_orientation: [0, 0, 1]  # Eje Z (rotación en plano XY)
+      joint_coords: [0, 0, 0]       # Origen en (0,0,0)
+      joint_axis: [0, 0, 1]         # Rotación alrededor de Z
+
     - id: 1
-      length: 0.210
+      length: 0.3      # Longitud segundo eslabón
       type: revolute
-      link_orientation: [0, 0, 1]
-      joint_coords: [0, 0, 0.080]
-      joint_axis: [0, 1, 0]
-    - id: 2
-      length: 0.0415
-      type: prismatic
-      link_orientation: [0, 0, 1]
-      joint_coords: [0, 0, 0.210]
-      joint_axis: [1, 0, 0]
+      link_orientation: [0, 0, 1]  # Eje Z
+      joint_coords: [0.5, 0, 0]     # Extremo del primer eslabón
+      joint_axis: [0, 0, 1]         # Rotación alrededor de Z
