@@ -1,0 +1,21 @@
+robot:
+  name: simple_robot
+  links:
+    - id: 0
+      length: 0.080
+      type: revolute
+      link_orientation: [0, 0, 1]
+      joint_coords: [0, 0, 0.103]
+      joint_axis: [0, 0, 1]
+    - id: 1
+      length: 0.210
+      type: revolute
+      link_orientation: [0, 0, 1]
+      joint_coords: [0, 0, 0.080]
+      joint_axis: [0, 1, 0]
+    - id: 2
+      length: 0.0415
+      type: prismatic
+      link_orientation: [0, 0, 1]
+      joint_coords: [0, 0, 0.210]
+      joint_axis: [1, 0, 0]
